<resources>

    <!-- Общее -->
    <string name="app_name">Playlist Maker</string>

    <!-- Главный экран -->
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>

    <!-- Экран Поиска и Ошибки -->
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_network_connection">Проблемы со связью</string>
    <string name="no_network_connection_subtext">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>

    <!-- Экран Настроек: Меню -->
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <!-- Экран Настроек: Функционал (Ссылки и Email) -->
    <string name="share_link">Привет! Вот ссылка на курс по Android-разработки от Яндекс Практикума!\n\nhttps://practicum.yandex.ru/android-developer/</string>
    <string name="link_to_the_user_agreement">https://yandex.ru/legal/practicum_offer/ru</string>
    <string name="address_mail_to_support">alex-sensey@yandex.ru</string>
    <string name="subject_mail_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_mail_to_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="no_email_app_found">Нет приложения для отправки письма!</string>
    <string name="ClearHistoryText">Очистить историю</string>
    <string name="YouSearchText">Вы искали</string>

    <!-- Экран избранного и плейлистов -->
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_favorites_message">Ваша медиатека пуста</string>
    <string name="empty_playlists_message">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>

    <!-- Экран создание плейлиста -->
    <string name="create">Создать</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="finish_playlist_creation">Завершить создание плейлиста?</string>
    <string name="data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="add_to_playlist_title">Добавить в плейлист</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %s</string>

</resources>