<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    style="@style/backgroundColorActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <!-- Заголовок экрана (без кнопки назад) -->
    <com.google.android.material.appbar.MaterialToolbar
        style="@style/nameActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:titleTextColor="?attr/colorOnSurface" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:text="@string/dark_theme"
        android:textSize="@dimen/text_size_16"
        app:useMaterialThemeColors="false" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_button"
        style="@style/textSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/share_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support_button"
        style="@style/textSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_agreement_button"
        style="@style/textSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/user_agreement" />

</LinearLayout>