<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    style="@style/backgroundColorMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size_title"
        app:title="@string/app_name"
        app:titleTextColor="@color/yp_white" />


    <Button
        android:id="@+id/search_button"
        style="@style/buttonMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top_medium"
        android:layout_weight="1"
        android:text="@string/search"
        app:icon="@drawable/ic_search_icon" />

    <Button
        android:id="@+id/media_button"
        style="@style/buttonMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/media_library"
        app:icon="@drawable/ic_media_icon" />

    <Button
        android:id="@+id/settings_button"
        style="@style/buttonMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_icon" />

</LinearLayout>