<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            style="@style/backIcon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.05"
            android:src="@drawable/ic_arrow_back_48x48" />

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/nameActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:title="@string/settings" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:text="@string/dark_theme"
        android:textSize="@dimen/text_size_16"
        app:useMaterialThemeColors="false" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_button"
        style="@style/textSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/share_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support_button"
        style="@style/textSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/support" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_agreement_button"
        style="@style/textSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/user_agreement" />

</LinearLayout>