<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_screen"
    style="@style/backgroundColorActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Заголовок экрана  -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        style="@style/nameActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:contentInsetStart="0dp"
        app:title="@string/search"
        app:titleTextColor="?attr/colorOnSurface" />

    <!-- Поле поиска -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_mini"
        android:layout_marginBottom="@dimen/margin_mini">

        <EditText
            android:id="@+id/search_edit_text"
            style="@style/searchBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:drawableStart="@drawable/ic_search_icon"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clear_button"
            style="@style/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/margin_small_end"
            android:src="@drawable/ic_clear_icon"
            android:visibility="gone"
            tools:visibility="visible" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_track"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_mini"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/track_layout" />


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/progress_par_layout"
            android:layout_height="@dimen/progress_par_layout"
            android:layout_gravity="center"
            android:indeterminateTint="@color/yp_blue"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/history_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_medium"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="@string/YouSearchText"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/text_size_19" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_history"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/margin_small"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/track_layout" />

            <Button
                android:id="@+id/clear_button_history"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/margin_top_medium"
                android:backgroundTint="?attr/colorOnSurface"
                android:text="@string/ClearHistoryText"
                android:textAllCaps="false"
                android:textColor="?attr/colorSurface"
                app:cornerRadius="@dimen/button_refresh_radius" />
        </LinearLayout>

        <!-- Плейсхолдер: Ничего не найдено -->
        <LinearLayout
            android:id="@+id/placeholder_nothing_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_placeholder_track_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/nothing_found"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/text_size_19" />
        </LinearLayout>

        <!-- Плейсхолдер: Ошибка сети -->
        <LinearLayout
            android:id="@+id/placeholder_network_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_placeholder_no_results" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/no_network_connection"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/text_size_19" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_mini"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:paddingHorizontal="@dimen/margin_top_medium"
                android:text="@string/no_network_connection_subtext"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/text_size_14" />

            <Button
                android:id="@+id/refresh_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_medium"
                android:backgroundTint="?attr/colorOnSurface"
                android:text="@string/refresh"
                android:textAllCaps="false"
                android:textColor="?attr/colorSurface"
                app:cornerRadius="@dimen/button_refresh_radius" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>