<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            style="@style/backIcon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.05"
            android:src="@drawable/ic_arrow_back" />

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/nameActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_size_title"
            app:title="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bar_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_edit_text"
            style="@style/searchBar"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_height"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_search_icon"
            android:hint="@string/search"
            android:inputType="text"
            android:textColor="@color/yp_black"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/clear_button"
            style="@style/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/margin_small_end"
            android:background="@drawable/search_bar_bg"
            android:src="@drawable/ic_clear_icon"
            android:visibility="invisible" />
    </LinearLayout>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_track"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_small"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/placeholder_nothing_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <!-- ЗАГЛУШКА: НИЧЕГО НЕ НАЙДЕНО -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_placeholder_track_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/nothing_found"
            android:textSize="19sp"
            android:textColor="?attr/colorOnSurface"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholder_network_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_top_medium"
        android:layout_marginEnd="@dimen/margin_top_medium"
        android:visibility="gone"
        tools:visibility="visible">

        <!-- ЗАГЛУШКА: ОШИБКА СЕТИ  -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_placeholder_no_results" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/no_network_connection"
            android:textSize="19sp"
            android:textColor="?attr/colorOnSurface"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/no_network_connection_subtext"
            android:textSize="@dimen/text_size_19"
            android:textColor="?attr/colorOnSurface"/>

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/refresh"
            android:textAllCaps="false"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_size_14"
            android:textColor="?attr/colorSurface"
            android:backgroundTint="?attr/colorOnSurface"
            app:cornerRadius="@dimen/button_refresh_radius"
            />

    </LinearLayout>

    </FrameLayout>

</LinearLayout>
